# redis-rs

./: .gitignore  Cargo.toml  项目目录结构说明.md
redis-ohos/: .gitignore  COMMAND_COVERAGE.md  Cargo.toml  Makefile  QUICKSTART.md  README_CN.md  STREAM_COMMANDS.md  build.rs
redis-ohos/examples/: basic_usage.ets  generic_cmd_usage.ets  stream_usage.ets
redis-ohos/scripts/: build-all-targets.sh  build-harmony.sh  check.sh  clean.sh  package.sh  test-compile.sh
redis-ohos/src/: client.rs  connection.rs  json_connection.rs  lib.rs  native_log.rs  types.rs
