[package]
name = "redis-ohos"
version = "1.0.0"
edition = "2021"
publish = false
description = "HarmonyOS NAPI bindings for redis-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core redis library
# Note: num-bigint is enabled by default in redis
redis = { path = "../redis", features = [
  "tokio-comp",
  "connection-manager",
  "json",
] }

# NAPI dependencies for HarmonyOS
napi-derive-ohos = "1.1"
napi-ohos = { version = "1.1", default-features = false, features = [
  "serde-json",
  "async",
  "napi8",
] }

# Logging
ohos-hilog-binding = { version = "0.1", features = ["redirect"] }
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = "0.3"

# JSON support
serde = { version = "1.0" }
serde_json = "1.0"

[build-dependencies]
napi-build-ohos = { version = "1.1" }

[profile.release]
lto = true
